--- a/first-app/package.json
+++ b/first-app/package.json
@@ -13,6 +13,7 @@
     "appwrite": "^20.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
