--- a/first-app/.env
+++ b/first-app/.env
@@ -1,4 +1,4 @@
 VITE_APPWRITE_PROJECT_ID = "68cd78ef003c389eb7be"
 VITE_APPWRITE_PROJECT_NAME = "movie_app_react"
 VITE_APPWRITE_ENDPOINT="https://nyc.cloud.appwrite.io/v1"
-VITE_TMDB_API_KEY="6a6558bff0bb907b08130276caefb000"
+VITE_REACT_APP_TMDB_API_KEY="6a6558bff0bb907b08130276caefb000"
